# nav2_gazebo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
config/: diff_drive_controller_velocity.yaml  ekf.yaml  nav2_params.yaml
description/: lidar.urdf  rover_2wd.urdf  rover_dev_payload.urdf
hooks/: nav2_gazebo.dsv.in
include/nav2_gazebo/: cart_name_extractor.hpp  fake_latch_plugin.hpp
launch/: complete_navigation.launch.py  display.launch.py
models/cart/: model.sdf
models/cart/meshes/: cart_body_collision.stl  cart_body_visual.stl
models/cart_corral/: model.config
scripts/: follow_waypoints.py  reach_goal.py
src/: cart_name_extractor.cpp  fake_latch_plugin.cpp
src/sam_bot_nav2_gz/: CMakeLists.txt
src/sam_bot_nav2_gz/config/: diff_drive_controller_velocity.yaml  ign_bridge.yaml  nav2_params.yaml
src/sam_bot_nav2_gz/description/: lidar.urdf  rover_2wd.urdf  rover_dev_payload.urdf
src/sam_bot_nav2_gz/launch/: complete_navigation.launch.py  display.launch.py
src/sam_bot_nav2_gz/models/TurtlebotArena/: model.sdf
src/sam_bot_nav2_gz/models/cart_corral/: model.config  model.sdf
src/sam_bot_nav2_gz/models/cart_corral/meshes/: cart_corral.stl
src/sam_bot_nav2_gz/models/sam_bot/: model.config  model.sdf
src/sam_bot_nav2_gz/src/description/: rover_zero_3_2wd_description.urdf
src/sam_bot_nav2_gz/world/: empty.sdf  grocery.sdf
test/: test_bringup.launch.py  test_follow_waypoints.launch.py  test_reach_goal.launch.py
world/: grocery.sdf
